[gd_scene load_steps=9 format=3 uid="uid://38hpxc86n28g"]

[ext_resource type="Script" path="res://scenes/endless_mode.gd" id="1_5codb"]
[ext_resource type="PackedScene" uid="uid://27sxmgkg6fdi" path="res://scenes/PlayingField/score_bar.tscn" id="2_dgjtq"]
[ext_resource type="Script" path="res://scenes/PlayingField/playing_field.gd" id="3_4h42d"]
[ext_resource type="PackedScene" uid="uid://cweg7yil1pury" path="res://scenes/PlayingField/canvas.tscn" id="3_wjj17"]
[ext_resource type="PackedScene" uid="uid://bnjc37jk5h6xx" path="res://scenes/PlayingField/entity_field.tscn" id="4_mwu1d"]
[ext_resource type="PackedScene" uid="uid://cq8g4rbaay25f" path="res://scenes/game_over_dialog.tscn" id="5_4n0y1"]
[ext_resource type="PackedScene" uid="uid://dc51n8jndld17" path="res://scenes/PlayingField/abilities.tscn" id="5_jnkj4"]
[ext_resource type="PackedScene" uid="uid://7ir32ja6lr1q" path="res://scenes/PlayingField/object_field.tscn" id="5_kfk2m"]

[node name="EndlessMode" type="Node"]
script = ExtResource("1_5codb")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0687983, 0.0687983, 0.0687983, 1)

[node name="ScoreBar" parent="." instance=ExtResource("2_dgjtq")]

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.05
show_percentage = false

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = -1
anchor_top = 0.055
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 0.48
alignment_vertical = 0

[node name="PlayingField" type="Control" parent="AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_4h42d")

[node name="Canvas" parent="AspectRatioContainer/PlayingField" instance=ExtResource("3_wjj17")]
unique_name_in_owner = true
layout_mode = 1
anchor_top = 0.0
anchor_bottom = 0.9
grow_horizontal = 2

[node name="StartPosition" type="Marker2D" parent="AspectRatioContainer/PlayingField/Canvas"]
unique_name_in_owner = true
position = Vector2(269, 980)

[node name="EntityField" parent="AspectRatioContainer/PlayingField" instance=ExtResource("4_mwu1d")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.9

[node name="ObjectField" parent="AspectRatioContainer/PlayingField" instance=ExtResource("5_kfk2m")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.9
offset_right = 0.0
offset_bottom = 0.0

[node name="Void" type="ColorRect" parent="AspectRatioContainer/PlayingField"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.10352e-05
offset_bottom = 0.00012207
grow_horizontal = 2
grow_vertical = 0
color = Color(0.364706, 0.364706, 0.364706, 1)

[node name="Abilities" parent="AspectRatioContainer/PlayingField" instance=ExtResource("5_jnkj4")]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
offset_top = -112.0
offset_bottom = 0.0

[node name="BallSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DeathTimer" type="Timer" parent="."]

[node name="GameOverDialog" parent="." instance=ExtResource("5_4n0y1")]
visible = false

[connection signal="timeout" from="BallSpawnTimer" to="." method="_on_ball_spawn_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
